argocd-helm-charts/kyverno/templates/harbor-proxy-cache/.kyverno-test/already-harbor-pod.patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: already-harbor-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: harbor.example.com/docker-hub-proxy-cache/library/nginx:latest
