argocd-helm-charts/kyverno/templates/harbor-proxy-cache/.kyverno-test/docker-io-pod.patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docker-io-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: harbor.example.com/docker-hub-proxy-cache/library/nginx:latest
  imagePullSecrets:
  - name: harbor-proxy-cache
