argocd-helm-charts/kyverno/templates/harbor-proxy-cache/.kyverno-test/implicit-official-pod.patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: implicit-official-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: harbor.example.com/docker-hub-proxy-cache/library/nginx:1.27.1
  imagePullSecrets:
  - name: harbor-proxy-cache
