argocd-helm-charts/kyverno/templates/harbor-proxy-cache/.kyverno-test/implicit-org-pod.patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: implicit-org-pod
  namespace: default
spec:
  containers:
  - name: graylog
    image: harbor.example.com/docker-hub-proxy-cache/graylog/graylog:6.3.1
  imagePullSecrets:
  - name: harbor-proxy-cache
